force-app/main/default/objects/UgarteRule__mdt/UgarteRule__mdt.object-meta.xml
<CustomObject>
    <label>Ugarte Rule</label>
    <pluralLabel>Ugarte Rules</pluralLabel>
</CustomObject>