force-app/main/default/objects/UgarteRule__mdt/fields/DoesGenerateOnInsert__c.field-meta.xml
<CustomField>
    <fullName>DoesGenerateOnInsert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Generate on Insert</label>
    <type>Checkbox</type>
</CustomField>