force-app/main/default/objects/UgarteRule__mdt/fields/DoesGenerateOnUpdate__c.field-meta.xml
<CustomField>
    <fullName>DoesGenerateOnUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate on Update</label>
    <type>Checkbox</type>
</CustomField>