force-app/main/default/objects/UgarteRule__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>UgarteRule__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Ugarte Rules</relationshipLabel>
    <relationshipName>UgarteRules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>