force-app/main/default/objects/UgarteRule__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Ugarte Rules</relationshipLabel>
    <relationshipName>UgarteRules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>