force-app/main/default/objects/UgarteRule__mdt/fields/UuidType__c.field-meta.xml
<CustomField>
    <fullName>UuidType__c</fullName>
    <label>UUID Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFC 4112 v4</fullName>
                <default>true</default>
                <label>RFC 4112 v4</label>
            </value>
            <value>
                <fullName>Salesforce Record ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>