force-app/main/default/objects/UgarteRule__mdt/listViews/AllUgarteRules.listView-meta.xml
<ListView>
    <fullName>AllUgarteRules</fullName>
    <columns>MasterLabel</columns>
    <columns>Object__c</columns>
    <columns>Field__c</columns>
    <columns>DoesGenerateOnInsert__c</columns>
    <columns>DoesGenerateOnUpdate__c</columns>
    <columns>UuidType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Ugarte Rules</label>
</ListView>